# Lineage

./: .gitignore  BUILD-PROVENANCE.md  README.md  audit-report.json  pyproject.toml
bob_sessions/: 01-architecture.md  01-architecture.meta.json  02-scaffold.md  02-scaffold.meta.json  03-bob-parser.md  03-bob-parser.meta.json  04-surgical-patch.md  04-surgical-patch.meta.json  05-attribution.meta.json  06-classifier.md  06-classifier.meta.json  08-export.md  08-export.meta.json
docs/: 02-scaffold-summary.md  ARCHITECTURE.md
docs/phases/: 03-bob-parser.md  05-attribution.md  06-classifier.md  08-export.md
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/components/: FileViewer.tsx  Nav.tsx  ProvenancePanel.tsx  StatsBar.tsx  Treemap.tsx
frontend/src/lib/: seed.ts
lineage/adapters/: base.py  bob.py
lineage/attribution/: engine.py  matcher.py  scorer.py
lineage/classification/: cache.py  classifier.py
lineage/cli/: main.py
lineage/core/: config.py  models.py
lineage/export/: eu_ai_act.py
lineage/storage/: database.py  schema.py
lineage/web/: app.py  routes.py
lineage/web/static/: index.html
scripts/: seed_demo.py
tests/unit/: test_attribution.py  test_bob_adapter.py  test_classification.py  test_export.py
